--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
         "dev": "vite",
         "build": "vite build"
     },
-    "devDependencies": {
+    "devDependencie": {
         "axios": "^0.27",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^3.0.0"
+        "vite": "^3.0."       
     }
 }
